--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,9 @@
 name: Run Python Selenium Firefox
 
 on:
-  schedule:
-    - cron: '*/10 * * * *'
+  workflow_dispatch:
+  #schedule:
+  #  - cron: '*/10 * * * *'
 
 jobs:
   build:
