--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 name: Run Python Selenium Firefox
 
 on:
-  #schedule:
-  # - cron: '*/10 * * * *'
+  schedule:
+   - cron: '*/10 * * * *'
   workflow_dispatch:
 
 jobs:
